<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Search App</string>
    <string name="app_name">SearchButton</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="largetxt1">1
        يرجى من الأخوة الكرام عدم استخدام الكلمات الدليلية إلا ممن يعلم طريقة استخدامها وفائدتها، فقد لاحظنا الكثير من المواضيع التي نشرت وتحمل اختياراً سيئاً للكلمات الدليلة تضر من آلية عملها. يرجى الإطلاع على موضوع المساعدة "ما هي الكلمات الدليلية وكيفية استخدامها وأهميتها"
    </string>

     <string name="largetxt2">2
         هذه قواعد طرح الاسئلة التي مراعاتها لضمان الحصول على أفضل نتيجة، و على أعلى إحترام للمشاركة من رواد المنتدى:، و حتي لا تتعرض المشاركة للغلق أو الالغاء . لأن أي مشاركة مخالفة لهذه القواعد ستكون في الغالب عبئاً اضافيا على من يبحث فى المنتدي لاحقا و من واجبنا منعها
    </string>
     <string name="largetxt3">3
      بمشاركة الجميع ستكون الفائدة أكبر ، و لن يعيبك أن يكون ردك ليس هو الافضل ، فتوضيح عيوب رد ما هي أيضا فائدة سيستفيد منها من بعدك . كما أن مشاركة الجميع فى الرد ستؤدي لتوفير وقت لدي أهل الخبرة ليعطوا فائدة أكبر فى مجال آخر كمثال إضافى أو درس.
     </string>

    <string name="largetxt4">4
        يرجى من الأخوة الكرام عدم استخدام الكلمات الدليلية إلا ممن يعلم طريقة استخدامها وفائدتها، فقد لاحظنا الكثير من المواضيع التي نشرت وتحمل اختياراً سيئاً للكلمات الدليلة تضر من آلية عملها. يرجى الإطلاع على موضوع المساعدة "ما هي الكلمات الدليلية وكيفية استخدامها وأهميتها"
    </string>
    <string name="largetxt5">5
     استخدم البحث في المنتدى قبل وضع سؤالك فقد يكون مكررا . و ذلك لتفادي عيوب التكرار و أهمها أن تكرار الموضوع سيصعب المهمة على من يبحث بعدك . و سيكون عبئا لا داعي له علي قاعدة بيانات المنتدى
    </string>
</resources>
